--- a/index.html
+++ b/index.html
@@ -266,8 +266,16 @@ footer {
     📺 YouTube – Atharv
   </a>
 
+  <!-- College Portfolio -->
+  <a href="https://atharv-24git.github.io/apcrgc-portfolio/" class="link-item" target="_blank">
+    🎓 APCRGC Portfolio – Atharv Roy
+  </a>
+
 </div>
 
+
+
+    
 <div style="display: none;">
 
   Ei div ta ar kaj korbe na, kintu code-e thakbe.
