--- a/index.html
+++ b/index.html
@@ -267,7 +267,7 @@ footer {
   </a>
 
   <!-- College Portfolio -->
-  <a href="https://atharv-24git.github.io/apcrgc-physics/" class="link-item" target="_blank">
+  <a href="https://novakyr1.github.io/apcrgc-portfolio/" class="link-item" target="_blank">
     🎓 APCRGC Portfolio – Atharv Roy
   </a>
 
